--- a/templates/bsy.html
+++ b/templates/bsy.html
@@ -210,6 +210,7 @@
             });
         }
 
+        // 불러오기
         function show_guestbook() {
             $.ajax({
                 type: "GET",
